--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 Este ejemplo es de gh-pages
 
-<a href="https://fsitios.github.io/"> Sitio Original </a>
+<a href="https://fsitios.github.io/"> Sitio Original </a> <br>
 
-<a href="https://fsitios.github.io/treemap.html"> Words Tree Map </a>
+<a href="https://fsitios.github.io/treemap.html"> Words Tree Map </a> <br>
 
-<a href="https://fsitios.github.io/wordcount.html"> Words Count </a>
+<a href="https://fsitios.github.io/wordcount.html"> Words Count </a> <br>
 
-<a href="https://fsitios.github.io/barras.html"> Demo Barras </a>
+<a href="https://fsitios.github.io/barras.html"> Demo Barras </a> <br>
 
-<a href="https://fsitios.github.io/donutchart.html"> Demo Donut </a>
+<a href="https://fsitios.github.io/donutchart.html"> Demo Donut </a> <br>
