--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Este ejemplo es de gh-pages
+<b>Este ejemplo es de gh-pages</b> <br>
 
 <a href="https://fsitios.github.io/"> Sitio Original </a> <br>
 
