--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     .mouse({
         "click": function(sample_data, viz) {
           if (typeof sample_data.link != "undefined"){
-           // window.location.href = sample_data.link;  
-            console.log("clicked!" + sample_data.link);
+            window.location.href = sample_data.link;  
+           // console.log("clicked!" + sample_data.link);
           }
         }
     })  
