--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     {"day": "11-nov-2016", "name":"Amanda Cox", "value": 3, "link": "http://www.nytimes.com/by/amanda-cox"}, 
     {"day": "11-nov-2016", "name":"USA Presidential Elections 2016", "value": 3, "link": "http://www.nytimes.com/elections/results/president"}, 
     
-    {"day": "12-nov-2016", "name":" ", "value": 35, "link": "https://fsitios.github.io/"},
-    {"day": "12-nov-2016", "name":" ", "value": 35, "link": "https://fsitios.github.io/"},
+    {"day": "12-nov-2016", "name":" ", "value": 35, "link": "#"},
+    {"day": "12-nov-2016", "name":" ", "value": 35, "link": "#"},
     {"day": "12-nov-2016", "name":"Graficos elecciones ee.uu.", "value": 3, "link": "https://www.washingtonpost.com/graphics/politics/2016-election/exit-polls/"}, 
     {"day": "12-nov-2016", "name":"One Dot per Person", "value": 3, "link": "http://demographics.coopercenter.org/DotMap/"}, 
     {"day": "12-nov-2016", "name":"Graphics with a Cause", "value": 3, "link": "https://youtu.be/Ys1F1xbS0vs"},     
