--- a/index2.html
+++ b/index2.html
@@ -9,6 +9,7 @@
   </style>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.17.0/vis.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.17.0/vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <p>
