--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
            // console.log("clicked!" + sample_data.link);
           }
         }
-    })  
+    })
+    .tooltip(["name", "day"]) 
     .time({"value": "day", "solo": "5-nov-2016"})
 
     .draw()
