--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
     
     {"day": "12-nov-2016", "name":"Graficos elecciones ee.uu.", "value": 3, "link": "https://www.washingtonpost.com/graphics/politics/2016-election/exit-polls/"}, 
     {"day": "12-nov-2016", "name":"One Dot per Person", "value": 3, "link": "http://demographics.coopercenter.org/DotMap/"}, 
-    {"day": "12-nov-2016", "name":"Graphics with a Cause", "value": 3, "link": "https://youtu.be/Ys1F1xbS0vs"}  
+    {"day": "12-nov-2016", "name":"Graphics with a Cause", "value": 3, "link": "https://youtu.be/Ys1F1xbS0vs"},
+    
+    {"day": "18-nov-2016", "name":"datastori.es", "value": 3, "link": "http://datastori.es"}, 
+    {"day": "18-nov-2016", "name":"Data Latam", "value": 3, "link": "http://www.datalatam.com/"}, 
+    {"day": "18-nov-2016", "name":"", "value": 3, "link": "https://"}     
   ]
   var visualization = d3plus.viz()
     .container("#viz")
