--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     
     {"day": "18-nov-2016", "name":"datastori.es", "value": 3, "link": "http://datastori.es"}, 
     {"day": "18-nov-2016", "name":"Data Latam", "value": 3, "link": "http://www.datalatam.com/"}, 
-    {"day": "18-nov-2016", "name":"", "value": 3, "link": "https://"}     
+    {"day": "18-nov-2016", "name":"Ed. Chi Taxonomy", "value": 3, "link": "http://www-users.cs.umn.edu/~echi/papers/infovis00/Chi-TaxonomyVisualization.pdf"}     
   ]
   var visualization = d3plus.viz()
     .container("#viz")
