--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     {"day": "18-nov-2016", "name":"Data Latam", "value": 3, "link": "http://www.datalatam.com/"}, 
     {"day": "18-nov-2016", "name":"Ed. Chi Taxonomy", "value": 3, "link": "http://www-users.cs.umn.edu/~echi/papers/infovis00/Chi-TaxonomyVisualization.pdf"},     
     {"day": "18-nov-2016", "name":"cippec (tsv)", "value": 3, "link": "https://github.com/aaizemberg/geo-data/blob/master/ar/cippec/cippec.tsv"},     
+    {"day": "18-nov-2016", "name":"R Cluster Analysis", "value": 3, "link": "http://www.statmethods.net/advstats/cluster.html"},     
 
     {"day": "19-nov-2016", "name":"Visualizing Data - Ben Fry", "value": 3, "link": "http://dbmanagement.info/Books/Others/Visualizing_Data_Jan_2008.pdf"}, 
     {"day": "19-nov-2016", "name":"", "value": 3, "link": ""}
