--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     {"day": "18-nov-2016", "name":"R Cluster Analysis", "value": 3, "link": "http://www.statmethods.net/advstats/cluster.html"},     
 
     {"day": "19-nov-2016", "name":"Visualizing Data - Ben Fry", "value": 3, "link": "http://dbmanagement.info/Books/Others/Visualizing_Data_Jan_2008.pdf"}, 
-    {"day": "19-nov-2016", "name":"", "value": 3, "link": ""}
+    {"day": "19-nov-2016", "name":"Fathom Information - Ben Fry", "value": 3, "link": "https://fathom.info/"},
+    {"day": "19-nov-2016", "name":"Processing 3", "value": 3, "link": "https://processing.org/"}
 
     
   ]
