--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
     .mouse({
         "click": function(sample_data, viz) {
           if (typeof sample_data.link != "undefined"){
-            window.location.href = sample_data.link;  
+             window.open(sample_data.link,'_blank');
+            //window.location.href = sample_data.link;  
            // console.log("clicked!" + sample_data.link);
           }
         }
