--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     {"day": "5-nov-2016", "name":"Gobierno Cordoba", "value": 3, "link": "https://gobiernoabierto.cordoba.gob.ar/visualizaciones/lista"},     
     {"day": "5-nov-2016", "name":"InfoVis", "value": 3, "link": "http://www.infovis-wiki.net/index.php?title=Information_Visualization"},         
     {"day": "5-nov-2016", "name":"JsBin", "value": 3, "link": "http://jsbin.com/"},         
+    {"day": "5-nov-2016", "name":"Excel de la clase", "value": 5, "link": "https://docs.google.com/spreadsheets/d/1cZD5mv-kVQRyYxETCaZYs56up_D5PDalZoUplHTPIVw/edit?usp=sharing"},  
     
     {"day": "11-nov-2016", "name":"Demo Barras", "value": 60, "link": "https://fsitios.github.io/barras.html"},    
     {"day": "11-nov-2016", "name":"Demo Donut", "value": 40, "link": "https://fsitios.github.io/donutchart.html"},
