--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 
     {"day": "19-nov-2016", "name":"Visualizing Data - Ben Fry", "value": 3, "link": "http://dbmanagement.info/Books/Others/Visualizing_Data_Jan_2008.pdf"}, 
     {"day": "19-nov-2016", "name":"Fathom Information - Ben Fry", "value": 3, "link": "https://fathom.info/"},
-    {"day": "19-nov-2016", "name":"Processing 3", "value": 3, "link": "https://processing.org/"}
+    {"day": "19-nov-2016", "name":"Processing 3", "value": 3, "link": "https://processing.org/"},
 
-    
+    {"day": "26-nov-2016", "name":"D3 circle Scaling ", "value": 3, "link": "https://fsitios.github.io/d3/circlescale.html"},
+    {"day": "26-nov-2016", "name":" ", "value": 3, "link": ""}   
   ]
   var visualization = d3plus.viz()
     .container("#viz")
