--- a/index.html
+++ b/index.html
@@ -43,8 +43,16 @@
     {"day": "19-nov-2016", "name":"Fathom Information - Ben Fry", "value": 3, "link": "https://fathom.info/"},
     {"day": "19-nov-2016", "name":"Processing 3", "value": 3, "link": "https://processing.org/"},
 
+    {"day": "25-nov-2016", "name":"Voronoi / Delanuay", "value": 4, "link": "http://www.visualcinnamon.com/2015/07/voronoi.html"},    
+    {"day": "25-nov-2016", "name":"Using a D3 Voronoi grid to improve a chart's interactive experience", "value": 3, "link": "http://www.visualcinnamon.com/2015/07/voronoi.html"},
+    {"day": "25-nov-2016", "name":"Visualising Supermarkets with a Voronoi Diagram", "value": 3, "link": "https://chriszetter.com/blog/2014/06/14/visualising-supermarkets-with-a-voronoi-diagram/"},
+    {"day": "25-nov-2016", "name":"Multi-Line Voronoi", "value": 3, "link": "https://bl.ocks.org/mbostock/8033015"},
+    {"day": "25-nov-2016", "name":"Piktochart", "value": 3, "link": "https://piktochart.com/"},
+    {"day": "25-nov-2016", "name":"Canva", "value": 3, "link": "https://www.canva.com/"},
+    
     {"day": "26-nov-2016", "name":"D3 circle Scaling", "value": 4, "link": "https://fsitios.github.io/d3/circlescale.html"},    
-    {"day": "26-nov-2016", "name":"", "value": 3, "link": ""}
+    {"day": "26-nov-2016", "name":"corporate taxes", "value": 3, "link": "http://www.nytimes.com/interactive/2013/05/25/sunday-review/corporate-taxes.html?_r=0"},
+    {"day": "26-nov-2016", "name":"", "value": 3, "link": ""} 
     
   ]
   var visualization = d3plus.viz()
