--- a/b.html
+++ b/b.html
@@ -10,7 +10,29 @@
 <!--
   <iframe src="https://public.tableau.com/views/P_2017/Presupuesto2017?:showVizHome=no&:embed=true" width="90%" height="2000"></iframe>
   -->
-<div class='tableauPlaceholder' id='viz1489176118474' style='position: relative'><noscript><a href='#'><img alt='Presupuesto 2017 de Sistemas ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;P_&#47;P_2017&#47;Presupuesto2017&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='site_root' value='' /><param name='name' value='P_2017&#47;Presupuesto2017' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;P_&#47;P_2017&#47;Presupuesto2017&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1489176118474');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1020px';vizElement.style.height='1033px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+<div class='tableauPlaceholder' id='viz1489176118474' style='position: relative'><noscript><a href='#'>
+  <img alt='Presupuesto 2017 de Sistemas ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;P_&#47;P_2017&#47;Presupuesto2017&#47;1_rss.png' style='border: none' /></a>
+  </noscript><object class='tableauViz'  style='display:none;'>
+  <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+  <param name='site_root' value='' />
+  <param name='name' value='P_2017&#47;Presupuesto2017' />
+  <param name='tabs' value='no' />
+  <param name='toolbar' value='yes' />
+  <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;P_&#47;P_2017&#47;Presupuesto2017&#47;1.png' /> 
+  <param name='animate_transition' value='yes' />
+  <param name='display_static_image' value='yes' />
+  <param name='display_spinner' value='yes' />
+  <param name='display_overlay' value='yes' />
+  <param name='display_count' value='yes' />
+  </object></div>              
+  <script type='text/javascript'>                 
+    var divElement = document.getElementById('viz1489176118474');     
+    var vizElement = divElement.getElementsByTagName('object')[0];      
+    vizElement.style.width='1200px';vizElement.style.height='2033px';       
+    var scriptElement = document.createElement('script');             
+    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';       
+    vizElement.parentNode.insertBefore(scriptElement, vizElement);        
+  </script>
   
 
 </body>
